--- a/zhilianyc/app/src/main/res/layout/activity_login.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_180"
+        android:background="@drawable/bg_gradients_90"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <View
+        android:id="@+id/view_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/dp_160"
+        android:background="@drawable/btn_00_r30"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageView
+        android:id="@+id/iv_logo"
+        android:layout_width="@dimen/dp_60"
+        android:layout_height="@dimen/dp_60"
+        android:layout_marginTop="@dimen/dp_30"
+        android:src="@mipmap/ic_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_20"
+        android:text="智链云仓(4.0.1)"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
+        app:layout_constraintStart_toStartOf="@+id/iv_logo"
+        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
+
+
+    <View
+        android:id="@+id/view_tab"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_35"
+        android:layout_marginStart="@dimen/dp_40"
+        android:layout_marginTop="@dimen/dp_40"
+        android:layout_marginEnd="@dimen/dp_40"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view_content" />
+
+
+    <LinearLayout
+        android:id="@+id/tab_login"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/view_tab"
+        app:layout_constraintStart_toStartOf="@+id/view_tab">
+
+        <TextView
+            android:id="@+id/tv_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="登录"
+            android:textColor="@color/color_1a1a1a"
+            android:textSize="@dimen/sp_18"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/line_login"
+            android:layout_width="@dimen/dp_15"
+            android:layout_height="@dimen/dp_3"
+            android:layout_marginTop="@dimen/dp_5"
+            android:background="@color/color_1C81E9" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/tab_register"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/dp_80"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/view_tab"
+        app:layout_constraintStart_toStartOf="@+id/view_tab">
+
+        <TextView
+            android:id="@+id/tv_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="注册"
+            android:textColor="@color/color_99"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/line_register"
+            android:layout_width="@dimen/dp_15"
+            android:layout_height="@dimen/dp_3"
+            android:layout_marginTop="@dimen/dp_5"
+            android:background="@color/color_1C81E9"
+            android:visibility="invisible" />
+
+    </LinearLayout>
+
+
+    <View
+        android:id="@+id/view_phone"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginTop="@dimen/dp_40"
+        app:layout_constraintEnd_toEndOf="@+id/view_tab"
+        app:layout_constraintStart_toStartOf="@+id/view_tab"
+        app:layout_constraintTop_toBottomOf="@+id/view_tab" />
+
+
+    <ImageView
+        android:id="@+id/iv_phone"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30"
+        android:src="@mipmap/ic_phone"
+        app:layout_constraintTop_toTopOf="@+id/view_phone"
+        app:layout_constraintStart_toStartOf="@+id/view_phone"
+        app:layout_constraintBottom_toBottomOf="@+id/view_phone"/>
+
+    <EditText
+        android:id="@+id/et_phone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/iv_phone"
+        app:layout_constraintTop_toTopOf="@+id/view_phone"
+        app:layout_constraintEnd_toEndOf="@+id/view_phone"
+        android:hint="请出入手机号"
+        android:maxLength="11"
+        android:inputType="phone"
+        android:layout_marginStart="@dimen/sp_10"
+        app:layout_constraintBottom_toBottomOf="@+id/view_phone"
+        android:background="@null"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_1"
+        app:layout_constraintBottom_toBottomOf="@+id/view_phone"
+        app:layout_constraintStart_toStartOf="@+id/view_phone"
+        android:background="@color/color_f0f0f0"
+        app:layout_constraintEnd_toEndOf="@+id/view_phone"/>
+
+
+    <View
+        android:id="@+id/view_password"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginTop="@dimen/dp_30"
+        app:layout_constraintEnd_toEndOf="@+id/view_tab"
+        app:layout_constraintStart_toStartOf="@+id/view_tab"
+        app:layout_constraintTop_toBottomOf="@+id/view_phone" />
+
+
+    <ImageView
+        android:id="@+id/iv_password"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30"
+        android:src="@mipmap/ic_password"
+        app:layout_constraintTop_toTopOf="@+id/view_password"
+        app:layout_constraintStart_toStartOf="@+id/view_password"
+        app:layout_constraintBottom_toBottomOf="@+id/view_password"/>
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/iv_password"
+        app:layout_constraintTop_toTopOf="@+id/view_password"
+        app:layout_constraintEnd_toEndOf="@+id/view_password"
+        android:hint="请出入密码"
+        android:maxLength="11"
+        android:inputType="textPassword"
+        android:layout_marginStart="@dimen/sp_10"
+        app:layout_constraintBottom_toBottomOf="@+id/view_password"
+        android:background="@null"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_1"
+        app:layout_constraintBottom_toBottomOf="@+id/view_password"
+        app:layout_constraintStart_toStartOf="@+id/view_password"
+        android:background="@color/color_f0f0f0"
+        app:layout_constraintEnd_toEndOf="@+id/view_password"/>
+
+
+    <TextView
+        android:id="@+id/btn_login"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_40"
+        android:text="登录"
+        android:gravity="center"
+        android:background="@drawable/bg_gradients_btn"
+        app:layout_constraintTop_toBottomOf="@+id/view_password"
+        app:layout_constraintStart_toStartOf="@+id/view_tab"
+        app:layout_constraintEnd_toEndOf="@+id/view_tab"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/dp_40"
+        android:textSize="@dimen/sp_16"/>
+
+    <TextView
+        android:id="@+id/btn_forget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="忘记密码"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        app:layout_constraintStart_toStartOf="@+id/view_tab"
+        app:layout_constraintEnd_toEndOf="@+id/view_tab"
+        android:textColor="@color/color_99"
+        android:layout_marginTop="@dimen/dp_20"
+        android:textSize="@dimen/sp_16"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
