--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="color_99">#999999</color>
     <color name="color_4b">#4b4b4b</color>
     <color name="color_4b_66">#664b4b4b</color>
+    <color name="color_red">#FF0000</color>
 
 
     <color name="color_f0f0f0">#f0f0f0</color>
