我的页面-账户信息页面

--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -8,22 +8,23 @@
 
 
     <color name="white">#ffffff</color>
+    <color name="white_66">#66ffffff</color>
     <color name="transparent">#00000000</color>
 
 
     <!--      start -->
     <color name="color_window_background">#f7f7f7</color>
-    <color name="color_text">#323232</color>
+    <color name="color_text">#1a1a1a</color>
     <color name="color_fa9611">#ff9912</color>
 
     <color name="color_99">#999999</color>
+    <color name="color_66">#666666</color>
     <color name="color_4b">#4b4b4b</color>
     <color name="color_4b_66">#664b4b4b</color>
     <color name="color_red">#FF0000</color>
 
 
     <color name="color_f0f0f0">#f0f0f0</color>
-    <color name="color_1a1a1a">#1a1a1a</color>
     <color name="color_1C81E9">#1C81E9</color>
     <color name="color_69B3FF">#69B3FF</color>
 
