--- a/zhilianyc/app/src/main/res/values/dimens.xml
+++ b/zhilianyc/app/src/main/res/values/dimens.xml
@@ -43,6 +43,7 @@
     <dimen name="dp_170">170dp</dimen>
     <dimen name="dp_175">175dp</dimen>
     <dimen name="dp_180">180dp</dimen>
+    <dimen name="dp_190">190dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_210">210dp</dimen>
     <dimen name="dp_220">220dp</dimen>
