--- a/zhilianyc/app/src/main/res/layout/fragment_my.xml
+++ b/zhilianyc/app/src/main/res/layout/fragment_my.xml
@@ -255,6 +255,7 @@
         android:layout_marginTop="@dimen/dp_30"
         app:layout_constraintEnd_toEndOf="parent"
         android:overScrollMode="never"
+        android:scrollbars="none"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view_content" />
 
