--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -32,7 +32,7 @@
     <color name="color_ededed">#ededed</color>
 
 <!--    文字颜色-->
-    <color name="color_368FEB">#368FEB</color>
+    <color name="color_368feb">#368FEB</color>
     <color name="color_f0f0f0">#f0f0f0</color>
 
 </resources>
