--- a/zhilianyc/app/src/main/res/layout/acitivty_address_edit.xml
+++ b/zhilianyc/app/src/main/res/layout/acitivty_address_edit.xml
@@ -1,9 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_start_15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/dp_15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_start_120"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/dp_120" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_end_15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/dp_15" />
+
+    <View
+        android:id="@+id/view_name"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_50"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="收货人"
+        app:layout_constraintBottom_toBottomOf="@+id/view_name"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_15"
+        app:layout_constraintTop_toTopOf="@+id/view_name" />
+
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:hint="输入收货人姓名"
+        app:layout_constraintBottom_toBottomOf="@+id/view_name"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_120"
+        app:layout_constraintTop_toTopOf="@+id/view_name" />
+
+    <View
+        android:id="@+id/view_phone"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_50"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_name" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="联系电话"
+        app:layout_constraintBottom_toBottomOf="@+id/view_phone"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_15"
+        app:layout_constraintTop_toTopOf="@+id/view_phone" />
+
+    <EditText
+        android:id="@+id/et_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:hint="输入收货人电话"
+        app:layout_constraintBottom_toBottomOf="@+id/view_phone"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_120"
+        app:layout_constraintTop_toTopOf="@+id/view_phone" />
+
+
+    <View
+        android:id="@+id/view_address"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_50"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/dp_10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_phone" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="所在地址"
+        app:layout_constraintBottom_toBottomOf="@+id/view_address"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_15"
+        app:layout_constraintTop_toTopOf="@+id/view_address" />
+
+    <TextView
+        android:id="@+id/tv_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:hint="请选择所在地址"
+        app:layout_constraintBottom_toBottomOf="@+id/view_address"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_120"
+        app:layout_constraintTop_toTopOf="@+id/view_address" />
+
+    <ImageView
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30"
+        android:src="@mipmap/ic_next2"
+        app:layout_constraintBottom_toBottomOf="@+id/view_address"
+        app:layout_constraintEnd_toEndOf="@+id/gl_end_15"
+        app:layout_constraintTop_toTopOf="@+id/view_address" />
+
+    <View
+        android:id="@+id/view_address_dts"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_50"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_address" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="详细地址"
+        app:layout_constraintBottom_toBottomOf="@+id/view_address_dts"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_15"
+        app:layout_constraintTop_toTopOf="@+id/view_address_dts" />
+
+    <EditText
+        android:id="@+id/et_address_dts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:hint="请输入详细地址"
+        app:layout_constraintBottom_toBottomOf="@+id/view_address_dts"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_120"
+        app:layout_constraintTop_toTopOf="@+id/view_address_dts" />
+
+
+    <View
+        android:id="@+id/view_default"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_address_dts" />
+
+
+    <ImageView
+        android:id="@+id/iv_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_check_un"
+        android:layout_marginStart="@dimen/dp_10"
+        app:layout_constraintBottom_toBottomOf="@+id/view_default"
+        app:layout_constraintStart_toStartOf="@+id/gl_start_15"
+        app:layout_constraintTop_toTopOf="@+id/view_default" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:hint="设为默认地址"
+        android:layout_marginStart="@dimen/dp_10"
+        app:layout_constraintBottom_toBottomOf="@+id/view_default"
+        app:layout_constraintStart_toEndOf="@+id/iv_check"
+        app:layout_constraintTop_toTopOf="@+id/view_default" />
+
+    <TextView
+        android:id="@+id/btn_submit"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginStart="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginEnd="@dimen/dp_15"
+        android:background="@drawable/bg_gradients_btn"
+        android:gravity="center"
+        android:text="提交"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_16"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_default" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
