--- a/zhilianyc/app/src/main/res/layout/activity_capital_set.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_capital_set.xml
@@ -7,7 +7,7 @@
 
 
     <EditText
-        android:id="@+id/et_psd"
+        android:id="@+id/et_pwd"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
         android:background="@color/white"
@@ -20,7 +20,7 @@
 
 
     <EditText
-        android:id="@+id/et_psd2"
+        android:id="@+id/et_pwd2"
         android:layout_width="0dp"
         android:layout_height="@dimen/dp_50"
         android:background="@color/white"
@@ -29,7 +29,7 @@
         android:paddingStart="@dimen/dp_15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_psd" />
+        app:layout_constraintTop_toBottomOf="@+id/et_pwd" />
 
 
     <EditText
@@ -43,7 +43,7 @@
         android:paddingStart="@dimen/dp_15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_psd2" />
+        app:layout_constraintTop_toBottomOf="@+id/et_pwd2" />
 
     <TextView
         android:id="@+id/tv_verify_code"
