--- a/zhilianyc/app/src/main/res/values/dimens.xml
+++ b/zhilianyc/app/src/main/res/values/dimens.xml
@@ -47,6 +47,7 @@
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_210">210dp</dimen>
     <dimen name="dp_220">220dp</dimen>
+    <dimen name="dp_225">225dp</dimen>
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_280">280dp</dimen>
     <dimen name="dp_300">300dp</dimen>
