注册 忘记密码

--- a/zhilianyc/app/src/main/res/layout/activity_modify_pwd.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_modify_pwd.xml
@@ -12,6 +12,7 @@
         android:background="@color/white"
         android:hint="输入旧密码"
         android:maxLines="1"
+        android:maxLength="20"
         android:paddingStart="@dimen/dp_15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_marginTop="@dimen/dp_10"
         android:background="@color/white"
         android:hint="输入新密码"
+        android:maxLength="20"
         android:maxLines="1"
         android:paddingStart="@dimen/dp_15"
         app:layout_constraintEnd_toEndOf="parent"
