--- a/zhilianyc/app/src/main/res/layout/activity_capital_set.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_capital_set.xml
@@ -12,6 +12,7 @@
         android:layout_height="@dimen/dp_50"
         android:background="@color/white"
         android:hint="输入资金密码"
+        android:maxLength="20"
         android:maxLines="1"
         android:paddingStart="@dimen/dp_15"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +40,7 @@
         android:background="@color/white"
         android:hint="请输入验证码"
         android:inputType="number"
+        android:maxLength="6"
         android:maxLines="1"
         android:layout_marginTop="@dimen/dp_10"
         android:paddingStart="@dimen/dp_15"
