--- a/zhilianyc/app/src/main/res/values/styles.xml
+++ b/zhilianyc/app/src/main/res/values/styles.xml
@@ -36,6 +36,17 @@
         <item name="android:background">@null</item>
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+
     <!--等待对话框 end-->
+
+    <!--对话框样式-->
+    <style name="mdialog" parent="Theme.AppCompat.Dialog">
+        <!--背景透明-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--没有标题-->
+        <item name="android:windowNoTitle">true</item>
+        <!--背景昏暗-->
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 
 </resources>
