--- a/zhilianyc/app/src/main/res/layout/fragment_my.xml
+++ b/zhilianyc/app/src/main/res/layout/fragment_my.xml
@@ -62,7 +62,7 @@
         android:id="@+id/tv_authentication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="已实名"
+        tools:text="已认证"
         android:textSize="@dimen/sp_10"
         android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="@+id/tv_name"
@@ -72,6 +72,7 @@
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         android:visibility="gone"
+        tools:visibility="visible"
         android:paddingTop="@dimen/dp_2"
         android:paddingBottom="@dimen/dp_2"
         android:background="@drawable/btn_61b53f_r1"/>
@@ -85,6 +86,8 @@
         android:textColor="@color/white"
         android:drawableLeft="@mipmap/ic_region"
         android:gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintTop_toTopOf="@+id/tv_name"
         app:layout_constraintBottom_toBottomOf="@+id/tv_name"
         app:layout_constraintStart_toEndOf="@+id/tv_authentication"
