--- a/zhilianyc/app/src/main/res/layout/activity_security.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_security.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
@@ -88,7 +89,18 @@
         app:layout_constraintStart_toStartOf="@+id/gl_start_15"
         app:layout_constraintTop_toTopOf="@+id/view_authentication" />
 
+    <TextView
+        android:id="@+id/tv_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="已认证"
+        android:textColor="@color/color_61B53F"
+        app:layout_constraintEnd_toStartOf="@+id/iv_status"
+        app:layout_constraintBottom_toBottomOf="@+id/view_authentication"
+        app:layout_constraintTop_toTopOf="@+id/view_authentication" />
+
     <ImageView
+        android:id="@+id/iv_status"
         android:layout_width="@dimen/dp_30"
         android:layout_height="@dimen/dp_30"
         android:src="@mipmap/ic_next2"
