--- a/zhilianyc/app/src/main/res/layout/acitivty_address_edit.xml
+++ b/zhilianyc/app/src/main/res/layout/acitivty_address_edit.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.Guideline
@@ -45,12 +46,14 @@
 
     <EditText
         android:id="@+id/et_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@null"
         android:hint="输入收货人姓名"
+        android:maxLength="5"
         app:layout_constraintBottom_toBottomOf="@+id/view_name"
         app:layout_constraintStart_toStartOf="@+id/gl_start_120"
+        app:layout_constraintEnd_toEndOf="@id/gl_end_15"
         app:layout_constraintTop_toTopOf="@+id/view_name" />
 
     <View
@@ -72,12 +75,15 @@
 
     <EditText
         android:id="@+id/et_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@null"
         android:hint="输入收货人电话"
+        android:maxLength="11"
+        android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="@+id/view_phone"
         app:layout_constraintStart_toStartOf="@+id/gl_start_120"
+        app:layout_constraintEnd_toEndOf="@id/gl_end_15"
         app:layout_constraintTop_toTopOf="@+id/view_phone" />
 
 
@@ -136,12 +142,15 @@
 
     <EditText
         android:id="@+id/et_address_dts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@null"
         android:hint="请输入详细地址"
+        android:maxLength="50"
+        tools:text="卡就够啦科技股"
         app:layout_constraintBottom_toBottomOf="@+id/view_address_dts"
         app:layout_constraintStart_toStartOf="@+id/gl_start_120"
+        app:layout_constraintEnd_toEndOf="@+id/gl_end_15"
         app:layout_constraintTop_toTopOf="@+id/view_address_dts" />
 
 
@@ -152,7 +161,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_address_dts" />
-
 
     <ImageView
         android:id="@+id/iv_check"
