--- a/zhilianyc/app/src/main/res/layout/item_address.xml
+++ b/zhilianyc/app/src/main/res/layout/item_address.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:id="@+id/cl_parent"
     android:background="@color/white">
 
     <androidx.constraintlayout.widget.Guideline
