--- a/zhilianyc/app/src/main/res/values/dimens.xml
+++ b/zhilianyc/app/src/main/res/values/dimens.xml
@@ -51,6 +51,7 @@
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_280">280dp</dimen>
     <dimen name="dp_300">300dp</dimen>
+    <dimen name="dp_340">340dp</dimen>
 
     <dimen name="sp_6">6sp</dimen>
     <dimen name="sp_7">7sp</dimen>
