--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -31,6 +31,7 @@
 
 <!--    分割线-->
     <color name="color_ededed">#ededed</color>
+    <color name="color_f7">#f7f7f7</color>
 
 <!--    文字颜色-->
     <color name="color_368feb">#368FEB</color>
