--- a/zhilianyc/app/src/main/res/values/styles.xml
+++ b/zhilianyc/app/src/main/res/values/styles.xml
@@ -49,4 +49,18 @@
         <item name="android:backgroundDimEnabled">true</item>
     </style>
 
+    <style name="CommonTabLayoutStyle" parent="Widget.Design.TabLayout">
+        <item name="android:background">@color/white</item>
+        <item name="tabIndicatorColor">@color/color_1C81E9</item>
+        <item name="tabIndicatorHeight">@dimen/dp_3</item>
+        <item name="tabBackground">@color/transparent</item>
+        <!--<item name="tabTextAppearance">@style/TabLayoutStyle</item>-->
+        <item name="tabSelectedTextColor">@color/color_1C81E9</item>
+        <item name="tabTextColor">@color/color_99</item>
+    </style>
+
+    <style name="TabLayoutStyle">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
