--- a/zhilianyc/app/src/main/res/xml/network_security_config.xml
+++ b/zhilianyc/app/src/main/res/xml/network_security_config.xml
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <base-config cleartextTrafficPermitted="true" />
+    <base-config cleartextTrafficPermitted="true" >
+        <trust-anchors>
+            <certificates
+                src="system"
+                overridePins="true"/>
+            <certificates
+                src="user"
+                overridePins="true"/>
+        </trust-anchors>
+    </base-config>
+    <domain-config>
+        <domain includeSubdomains="true">i.snssdk.com</domain>
+        <domain includeSubdomains="true">is.snssdk.com</domain>
+        <domain includeSubdomains="true">extlog.snssdk.com</domain>
+        <domain includeSubdomains="true">sf3-ttcdn-tos.pstatp.com</domain>
+        <domain includeSubdomains="true">azhituo.com</domain>
+        <trust-anchors>
+            <certificates src="user"/>//信任用户自己安装的证书
+            <certificates src="system"/>
+        </trust-anchors>
+    </domain-config>
 </network-security-config>
