--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
 <!--    渐变色 -->
     <color name="color_1C81E9">#1C81E9</color>
     <color name="color_69B3FF">#69B3FF</color>
+    <color name="color_47A3FF">#47A3FF</color>
     <color name="color_FBAE17">#FBAE17</color>
     <color name="color_F7C03F">#F7C03F</color>
     <color name="color_FF666E">#FF666E</color>
