--- a/zhilianyc/app/src/main/res/layout/title_layout.xml
+++ b/zhilianyc/app/src/main/res/layout/title_layout.xml
@@ -13,8 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:padding="10dp"
-        android:src="@mipmap/icon_back"
-        android:visibility="gone" />
+        android:src="@mipmap/icon_back" />
 
     <TextView
         android:id="@+id/title_tv"
