--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -42,6 +42,7 @@
 <!--    背景色-->
     <color name="color_cc">#cccccc</color>
     <color name="color_61B53F">#61B53F</color>
+    <color name="color_FFF0F0">#FFF0F0</color>
 
 <!--    阴影-->
     <color name="color_1139638F">#1139638F</color>
