--- a/zhilianyc/app/src/main/res/layout/activity_invitation.xml
+++ b/zhilianyc/app/src/main/res/layout/activity_invitation.xml
@@ -54,7 +54,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Title" />
+        android:text="邀请好友" />
 
     <TextView
         android:id="@+id/right_tv"
