--- a/zhilianyc/app/src/main/res/layout/title_layout.xml
+++ b/zhilianyc/app/src/main/res/layout/title_layout.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:padding="10dp"
+        android:visibility="gone"
+        tools:visibility="visible"
         android:src="@mipmap/icon_back" />
 
     <TextView
