--- a/zhilianyc/app/src/main/res/values/dimens.xml
+++ b/zhilianyc/app/src/main/res/values/dimens.xml
@@ -37,6 +37,7 @@
     <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_110">110dp</dimen>
     <dimen name="dp_120">120dp</dimen>
+    <dimen name="dp_130">130dp</dimen>
     <dimen name="dp_140">140dp</dimen>
     <dimen name="dp_150">150dp</dimen>
     <dimen name="dp_160">160dp</dimen>
