--- a/zhilianyc/app/src/main/res/layout/item_my_team.xml
+++ b/zhilianyc/app/src/main/res/layout/item_my_team.xml
@@ -7,15 +7,6 @@
     android:orientation="vertical"
     android:paddingStart="@dimen/dp_15">
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="@dimen/sp_20"
-        android:background="@drawable/bg_gradients_btn_fbae17"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/tv_post"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/iv_head"
         android:layout_width="@dimen/dp_50"
@@ -26,73 +17,99 @@
         tools:src="@mipmap/ic_logo" />
 
     <TextView
+        android:id="@+id/tv_name"
+        app:layout_constraintStart_toEndOf="@+id/iv_head"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginStart="@dimen/dp_10"
+        app:layout_constraintTop_toTopOf="@id/iv_head"
+        android:text="1351513464"
+        android:layout_width="wrap_content"
+        android:textSize="@dimen/sp_16"
+        android:layout_height="wrap_content"/>
+
+    <TextView
         android:id="@+id/tv_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_10"
-        android:paddingEnd="@dimen/dp_15"
-        android:textColor="@color/white"
         android:textSize="@dimen/sp_12"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/color_FBAE17"
+        android:textColor="@color/white"
+        android:paddingStart="@dimen/dp_4"
+        android:paddingEnd="@dimen/dp_4"
+        android:paddingTop="@dimen/dp_2"
+        android:paddingBottom="@dimen/dp_2"
+        app:layout_constraintBottom_toBottomOf="@id/iv_head"
         app:layout_constraintStart_toEndOf="@+id/iv_head"
-        app:layout_constraintTop_toTopOf="parent"
-        android:minWidth="@dimen/dp_50"
         tools:text="主管主管" />
+
+    <TextView
+        android:id="@+id/tv_realName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_10"
+        android:textSize="@dimen/sp_12"
+        android:background="@color/color_FF4751"
+        android:textColor="@color/white"
+        android:paddingStart="@dimen/dp_4"
+        android:paddingEnd="@dimen/dp_4"
+        android:paddingTop="@dimen/dp_2"
+        android:paddingBottom="@dimen/dp_2"
+        app:layout_constraintBottom_toBottomOf="@id/iv_head"
+        app:layout_constraintStart_toEndOf="@+id/tv_post"
+        tools:text="未实名" />
 
     <LinearLayout
         android:id="@+id/view_people"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/dp_160"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:gravity="center"
-        app:layout_constraintEnd_toStartOf="@+id/view_team"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginEnd="@dimen/dp_60"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_name">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_99"
+            android:text="个人劳动值:"/>
 
         <TextView
             android:id="@+id/tv_people"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sp_16"
+            android:layout_marginStart="@dimen/dp_10"
             android:textStyle="bold"
             tools:text="1"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_99"
-            android:layout_marginTop="@dimen/dp_10"
-            android:text="个人劳动值"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/view_team"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="@dimen/dp_60"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/view_people"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/tv_post">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_99"
+            android:text="团队劳动值:"/>
 
         <TextView
             android:id="@+id/tv_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sp_16"
+            android:layout_marginStart="@dimen/dp_10"
             android:textStyle="bold"
             tools:text="1"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_99"
-            android:layout_marginTop="@dimen/dp_10"
-            android:text="团队劳动值"/>
 
     </LinearLayout>
 
