--- a/zhilianyc/app/src/main/res/values/colors.xml
+++ b/zhilianyc/app/src/main/res/values/colors.xml
@@ -46,6 +46,7 @@
     <color name="color_61B53F_33">#3361B53F</color>
     <color name="color_FFF0F0">#FFF0F0</color>
     <color name="color_E5F2FF">#E5F2FF</color>
+    <color name="color_2A7FD6">#2A7FD6</color>
 
 <!--    阴影-->
     <color name="color_1139638F">#1139638F</color>
