--- a/zhilianyc/app/src/main/res/layout/goods_details.xml
+++ b/zhilianyc/app/src/main/res/layout/goods_details.xml
@@ -8,7 +8,13 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical"
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -220,6 +226,13 @@
                 app:layout_constraintStart_toStartOf="@+id/view_content"
                 app:layout_constraintTop_toBottomOf="@+id/tv_title2"
                 tools:text="昂跨境电商了反感聚少离多" />
+
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="@dimen/dp_100"
+                app:layout_constraintTop_toBottomOf="@+id/tv_content"
+                app:layout_constraintStart_toStartOf="parent"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
